<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="273dp"
        android:layout_height="58dp"
        android:layout_marginTop="68dp"
        android:digits="@string/StringRange"
        android:hint="First Name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="273dp"
        android:layout_height="58dp"
        android:digits="@string/StringRange"
        android:hint="Last Name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="127dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        app:srcCompat="@drawable/ic_launcher_background" />

    <RadioGroup
        android:id="@+id/radioGroupNew"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="90dp"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="94dp"
            android:layout_height="47dp"
            android:orientation='horizontal'
            android:text="@string/male" />

    </RadioGroup>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupNew"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/textViewSelectGender"
        android:layout_width="147dp"
        android:layout_height="34dp"
        android:text="@string/textViewSelectGender"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        app:layout_constraintVertical_bias="0.009" />

</androidx.constraintlayout.widget.ConstraintLayout>