<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/firstNameNew"
        android:layout_width="273dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:digits="@string/StringRange"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/firstNameNew"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameNew"
        android:layout_width="273dp"
        android:layout_height="58dp"
        android:digits="@string/StringRange"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lastNameNew"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameNew" />

    <ImageView
        android:id="@+id/imageViewNew"
        android:layout_width="150dp"
        android:layout_height="134dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameNew"
        app:srcCompat="@drawable/gender" />

    <RadioGroup
        android:id="@+id/radioGroupNew"
        android:layout_width="224dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNew">

        <RadioButton
            android:id="@+id/femaleNew"
            android:layout_width="107dp"
            android:layout_height="49dp"
            android:text="@string/female"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/maleNew"
            android:layout_width="118dp"
            android:layout_height="48dp"
            android:text="@string/maleNew"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/saveButtonNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveNew"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupNew"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/textViewSelectGenderEdit"
        android:layout_width="144dp"
        android:layout_height="31dp"
        android:text="@string/textViewSelectGenderEdit"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameNew"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>